<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vibgyor.rsantosh.com.vibgyor.Vibgyor">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/first_colour"
        android:id="@+id/red"
        android:layout_weight="1"
        android:background="@color/red"
        android:gravity="center"
        android:clickable="true"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="1"
        android:background="@color/orange"
        android:text="@string/second_colour"
        android:id="@+id/orange"
        android:gravity="center"
        android:clickable="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="1"
        android:background="@color/yellow"
        android:text="@string/third_colour"
        android:id="@+id/yellow"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="1"
        android:background="@color/green"
        android:text="@string/fourth_colour"
        android:id="@+id/green"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="1"
        android:background="@color/blue"
        android:text="@string/fifth_colour"
        android:id="@+id/blue"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="1"
        android:background="@color/indigo"
        android:text="@string/sixth_colour"
        android:id="@+id/indigo"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="1"
        android:background="@color/violet"
        android:text="@string/seventh_colour"
        android:id="@+id/violet"
        android:gravity="center"
        />


</LinearLayout>

